# Armory

./: .gitignore  .gitmodules  README.md
cmake/: armory_build.cmake  config_template.cmake  toolchain_gcc.cmake
cmake/ST/: stm32_devices.cmake  stm32f0hal.cmake  stm32f1hal.cmake  stm32f2hal.cmake  stm32f3hal.cmake  stm32f4hal.cmake  stm32f7hal.cmake  stm32g0hal.cmake  stm32g4hal.cmake  stm32h7hal.cmake  stm32l0hal.cmake  stm32l1hal.cmake  stm32l4hal.cmake  stm32l5hal.cmake  stm32u5hal.cmake  stm32wbhal.cmake  stm32wlhal.cmake  vendor_build.cmake
examples/Nordic_Thingy_53/: CMakeLists.txt  config.cmake
examples/Nordic_Thingy_53/src/: main.c  syscalls.c
examples/ST_STM32F429_Discovery/: CMakeLists.txt  config.cmake
examples/ST_STM32F429_Discovery/inc/: stm32f4xx_hal_conf.h
examples/ST_STM32F429_Discovery/src/: STM32F429ZITx_FLASH.ld  main.c  startup_stm32f429xx.s  stm32f4xx_it.c
examples/ST_STM32L432_Nucleo/: CMakeLists.txt  config.cmake
examples/ST_STM32L432_Nucleo/src/: main.c  stm32l4xx_it.c
examples/WeAct Black Pill/: CMakeLists.txt  config.cmake  doc.txt
examples/WeAct Black Pill/inc/: stm32f4xx_hal_conf.h
examples/WeAct Black Pill/src/: main.c
